<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_tweet" />

    <ImageView
        android:id="@+id/ibClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:id="@+id/llInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfilePic"
        android:minHeight="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etTweet"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/tweet_hint"
            android:maxLength="140"
            android:minHeight="60dp"
            android:paddingTop="10dp"
            android:singleLine="false"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium">

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/ivTweetMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:maxHeight="300dp"
            android:src="@mipmap/ic_launcher"
            android:visibility="gone" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llInput"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <ImageView
                android:id="@+id/ibCamera"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_camera"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnTweet"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/tweet_label"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvTweetCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/btnTweet"
                android:layout_toStartOf="@id/btnTweet"
                android:text="@string/tweet_count"
                android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                android:textColor="@android:color/secondary_text_light" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>